@@ -13,6 +13,9 @@
    - markus@cvs.openbsd.org 2001/07/04 23:39:07
      [ssh-agent.c]
      for smartcards remove both RSA1/2 keys
+   - markus@cvs.openbsd.org 2001/07/04 23:49:27
+     [ssh-agent.c]
+     handle mutiple adds of the same smartcard key
 
 20010711
  - (djm) dirname(3) may modify its argument on glibc and other systems. 
